Table: fix that when the table is empty that the tips cannot in the middle and the scrollbars cannot be dragged.(#14148)

--- a/packages/theme-chalk/src/table.scss
+++ b/packages/theme-chalk/src/table.scss
@@ -18,19 +18,13 @@
   // 数据为空
   @include e(empty-block) {
     min-height: 60px;
-    text-align: center;
-    width: 100%;
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
   }
 
   @include e(empty-text) {
-    // min-height doesn't work in IE10 and IE11 https://github.com/philipwalton/flexbugs#3-min-height-on-a-flex-container-wont-apply-to-its-flex-items
-    // set empty text line height up to contrainer min-height as workaround.
-    line-height: 60px;
-    width: 50%;
+    position: absolute;
+    top: 50%;
+    text-align: center;
+    width: 100%;
     color: $--color-text-secondary;
   }
 
